admin-panel check-in

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -13,6 +13,9 @@
                 <li class="nav-item">
                     <a class="nav-link" aria-disabled="true" routerLink="/messages" routerLinkActive="active">Messages</a>
                 </li>
+                <li *appHasRole="['Admin', 'Moderator']" class="nav-item">
+                    <a class="nav-link" aria-disabled="true" routerLink="/admin" routerLinkActive="active">Admin</a>
+                </li>
             </ng-container>
         </ul>
 
